--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
-# tasks file for cloud-monitoring-agent
-- name: setup monitoring agent apt key
-  apt_key: url='https://monitoring.api.rackspacecloud.com/pki/agent/linux.asc' state=present
+# tasks file for cloud-backup-agent
+- name: setup backup agent apt key
+  apt_key: url='http://agentrepo.drivesrvr.com/debian/agentrepo.key' state=present
 
-- name: setup monitoring agent apt repository
-  apt_repository: repo='deb http://stable.packages.cloudmonitoring.rackspace.com/ubuntu-14.04-x86_64 cloudmonitoring main' state=present
+- name: setup backup agent apt repository
+  apt_repository: repo='deb [arch=amd64] http://agentrepo.drivesrvr.com/debian/ serveragent main' state=present
 
-- name: install monitoring agent
-  apt: name=rackspace-monitoring-agent state=present update_cache=yes cache_valid_time=86400
+- name: install backup agent
+  apt: name=driveclient state=present update_cache=yes cache_valid_time=86400
 
-- name: setup the monitoring agent
-  command: rackspace-monitoring-agent --setup --username {{ rackspace_username }} --apikey {{ rackspace_apikey }} creates=/etc/rackspace-monitoring-agent.cfg
+#- name: setup the backup agent
+#  command: rackspace-monitoring-agent --setup --username {{ rackspace_username }} --apikey {{ rackspace_apikey }} creates=/etc/rackspace-monitoring-agent.cfg
 
 - name: ensure agent is started
-  service: name=rackspace-monitoring-agent state=started
+  service: name=driveclient state=started
