adding back in the creds

--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,6 @@ image: linuturk/ubuntu-ansible
 script:
   - ansible-galaxy install -r $DRONE_BUILD_DIR/tests/roles.list
   - ansible-playbook --syntax-check $DRONE_BUILD_DIR/tests/main.yml
-  - ansible-playbook $DRONE_BUILD_DIR/tests/main.yml
-  - ansible-playbook $DRONE_BUILD_DIR/tests/main.yml
-  - "ansible-playbook $DRONE_BUILD_DIR/tests/main.yml | grep -q 'changed=0.*failed=0' && (echo 'Idempotence test: pass' && exit 0) || (echo 'Idempotence test: fail' && exit 1)"
+  - ansible-playbook $DRONE_BUILD_DIR/tests/main.yml --extra-vars 'rackspace_username={{ rax_user }} rackspace_apikey={{ rax_key }}'
+  - ansible-playbook $DRONE_BUILD_DIR/tests/main.yml --extra-vars 'rackspace_username={{ rax_user }} rackspace_apikey={{ rax_key }}'
+  - "ansible-playbook $DRONE_BUILD_DIR/tests/main.yml --extra-vars 'rackspace_username={{ rax_user }} rackspace_apikey={{ rax_key }}' | grep -q 'changed=0.*failed=0' && (echo 'Idempotence test: pass' && exit 0) || (echo 'Idempotence test: fail' && exit 1)"
