--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,4 @@
-image: linuturk/ubuntu-ansibleb
+image: linuturk/ubuntu-ansible
 script:
   - ansible-galaxy install -r $DRONE_BUILD_DIR/tests/roles.list
   - ansible-playbook --syntax-check $DRONE_BUILD_DIR/tests/main.yml
