--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,6 @@
 image: linuturk/ubuntu-ansible
 script:
+  - rsyslogd &
   - ansible-galaxy install -r $DRONE_BUILD_DIR/tests/roles.list
   - ansible-playbook --syntax-check $DRONE_BUILD_DIR/tests/main.yml
   - ansible-playbook $DRONE_BUILD_DIR/tests/main.yml --extra-vars 'rackspace_username={{ rax_user }} rackspace_apikey={{ rax_key }}'
