--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,7 +18,7 @@
 
 - name: first run file flag
   file: path=/etc/driveclient/ansible_ran state=touch
-  when: ansible_ran.stat.exists
+  when: ansible_ran.stat.exists is not defined
 
 - name: ensure agent is started
   service: name=driveclient state=started
